# tray-launcher

./: .gitignore  LICENSE  README.md  launcher_tray_GUI.py  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  pre-commit-cronjob.yml
launcher_core/: launcher_core.py
src/tray_launcher/: child_script.py  child_script_manager.py  cli.py  client.py  core.py  env_test.py  gui.py  gui_editted.py  gui_with_server.py  icon.py  launcher_parser.py  launcher_tray_GUI.py  listener.py  parser.py  popen_log.py  psutil_test.py  py_client.bat.txt  py_server.bat.txt  pyqt5_client.py  t.py  t_test.py  test.py  test_t.py  tray_launcher_client.py
src/tray_launcher/launcher_core/: __init__.py  launcher_core.py
