[build-system]
requires = [
    "setuptools>=43",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = [
    "py37",
    "py38",
    "py39",
    "py310",
]
line-length = 100

[tool.isort]
py_version = "37"
line_length = 100
skip_gitignore = true
profile = "black"
force_single_line = true
