[metadata]
name = tray-launcher
version = attr: tray_launcher.__version__
author = Huaxu Dan
author_email = danhuaxutommy@gmail.com
license_file = LICENSE
description = An icon resided in the task bar for managing .bat scripts.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Jayich-Lab/tray-launcher/
project_urls =
    Source Code = https://github.com/Jayich-Lab/tray-launcher/
    Bug Tracker = https://github.com/Jayich-Lab/tray-launcher/issues/
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3 :: Only
    Topic :: System :: Logging
    Topic :: System :: Monitoring
    Topic :: Utilities

[options]
python_requires = ~= 3.0
install_requires =
    PyQt5
    sys
	os
	time
	pathlib
	functools
	shutil
	logging
	win32gui
	win32process
	subprocess
	signal
	win32con
	
packages = find:
package_dir =
     = src
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    tray-launcher = tray_launcher.gui:main
