[metadata]
name = tray-launcher
version = attr: tray_launcher.__version__
author = Huaxu Dan
author_email = danhuaxutommy@gmail.com
license_file = LICENSE
description = A launcher for Windows that resides in the taskbar for managing .bat scripts.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Jayich-Lab/tray-launcher/
project_urls =
    Source Code = https://github.com/Jayich-Lab/tray-launcher/
    Bug Tracker = https://github.com/Jayich-Lab/tray-launcher/issues/
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3 :: Only
    Topic :: System :: Logging
    Topic :: System :: Monitoring
    Topic :: Utilities

[options]
# https://devguide.python.org/#status-of-python-branches
python_requires = ~=3.7
install_requires =
    PyQt5
    pywin32
    psutil
packages = find:
package_dir =
     = src

[options.packages.find]
where = src

[options.package_data]
tray_launcher = icons/*

[options.entry_points]
console_scripts =
    launcher = tray_launcher.launcher_parser:main

[flake8]
select = BLK,I,W,E,F,C,B
max-line-length = 100
extend-ignore = E203
max-complexity = 10
